--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -86,6 +86,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-//    implementation 'uz.unical.android:core:1.0.0-alpha01'
-//    implementation project(':core')
+    implementation project(':android-core:lib')
 }
