--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.DS_Store
+.S_Store
 /build
 /captures
 .externalNativeBuild
