--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,3 +1,5 @@
+import dependencies.dependencies.Dependencies
+
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
@@ -87,4 +89,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation project(':android-core:lib')
+
+    implementation 'com.airbnb.android:lottie:5.2.0'
 }
