--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -86,7 +86,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation project(':android-core:lib')
+    implementation project(':libs:android-core:lib')
 
     implementation 'com.airbnb.android:lottie:5.2.0'
 }
