--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,6 +5,8 @@ plugins {
 }
 
 android {
+    namespace "com.ailnor.fragment"
+
     compileSdkVersion 31
 
     defaultConfig {
@@ -32,49 +34,49 @@ android {
     buildToolsVersion '30.0.3'
 }
 
-def githubProperties = new Properties()
-githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
-
-def getVersionName = { ->
-    return "1.0.0-alpha01"
-}
-
-def getArtifactId = { ->
-    return "fragment"
-}
-
-publishing {
-    publications {
-        bar(MavenPublication) {
-            groupId "${githubProperties['gpr.groupId']}.android"
-            artifactId getArtifactId()
-            version getVersionName()
-            artifact("$buildDir/outputs/aar/${getArtifactId()}-release.aar")
-
-            pom.withXml {
-                def dependenciesNode = asNode().appendNode('dependencies')
-
-                configurations.implementation.allDependencies.each {
-                    def dependencyNode = dependenciesNode.appendNode('dependency')
-                    dependencyNode.appendNode('groupId', it.group)
-                    dependencyNode.appendNode('artifactId', it.name)
-                    dependencyNode.appendNode('version', it.version)
-                }
-            }
-        }
-    }
-
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/${githubProperties['gpr.username']}/fragment")
-            credentials {
-                username = githubProperties['gpr.username']
-                password = githubProperties['gpr.key']
-            }
-        }
-    }
-}
+//def githubProperties = new Properties()
+//githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
+//
+//def getVersionName = { ->
+//    return "1.0.0-alpha01"
+//}
+//
+//def getArtifactId = { ->
+//    return "fragment"
+//}
+//
+//publishing {
+//    publications {
+//        bar(MavenPublication) {
+//            groupId "${githubProperties['gpr.groupId']}.android"
+//            artifactId getArtifactId()
+//            version getVersionName()
+//            artifact("$buildDir/outputs/aar/${getArtifactId()}-release.aar")
+//
+//            pom.withXml {
+//                def dependenciesNode = asNode().appendNode('dependencies')
+//
+//                configurations.implementation.allDependencies.each {
+//                    def dependencyNode = dependenciesNode.appendNode('dependency')
+//                    dependencyNode.appendNode('groupId', it.group)
+//                    dependencyNode.appendNode('artifactId', it.name)
+//                    dependencyNode.appendNode('version', it.version)
+//                }
+//            }
+//        }
+//    }
+//
+//    repositories {
+//        maven {
+//            name = "GitHubPackages"
+//            url = uri("https://maven.pkg.github.com/${githubProperties['gpr.username']}/fragment")
+//            credentials {
+//                username = githubProperties['gpr.username']
+//                password = githubProperties['gpr.key']
+//            }
+//        }
+//    }
+//}
 
 
 dependencies {
